src/BadLang/Tests/BadC.Tests/tests/passing/operators/BitwiseAnd8.basm
.dependency TestFramework

.data data data_raw BASM_DATA
{
	.cstr FailMsg assembly "8-bit Bitwise And Failed"
}

.code code code_raw BadC
{
	void __main__() : export
	{
		i8 value = 1 & 2;

		TestFramework::Assert::Equals8(value, 0, &data::FailMsg);

		halt;
	}
}