src/BadLang/Tests/BadC.Tests/tests/failing/ParseException/InvalidVoidDereference.basm

.code code code_raw BadC
{
	void __main__() : export
	{
		void* ptr = 0;
		i8 value = *ptr;
		halt;
	}
}